--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 stored_hs/
 hf_token.txt
-*/__pycache__/
+__pycache__/
+*.pyc
 packages-microsoft*
 ifeval_experiments/representations/
 length_constraints/representations/
@@ -9,3 +10,4 @@ keywords/representations/
 stored_hs
 .DS_Store
 *.download
+*.zip
