--- a/config/eval_keyword_constraints.yaml
+++ b/config/eval_keyword_constraints.yaml
@@ -5,6 +5,7 @@ dry_run: False
 output_path: 'out/'
 path_to_hf_token: './hf_token.txt'
 nonparametric_only: False
+transformers_cache_dir: /cluster/scratch/stolfoa/transformers_cache
 
 model_name: 'phi-3'
 max_generation_length: 1024
