--- a/config/conf.yaml
+++ b/config/conf.yaml
@@ -1,15 +1,19 @@
 device: 'cuda'
-project_dir: '/home/t-astolfo/t-astolfo/ifeval_experiments'
-data_path: '../data/input_data_single_instr.jsonl'
+project_dir: './ifeval_experiments'
+data_path: './data/input_data_single_instr.jsonl'
 dry_run: False
 output_path: 'out/'
-path_to_hf_token: '../hf_token.txt'
+path_to_hf_token: './hf_token.txt'
+transformers_cache_dir: /cluster/scratch/stolfoa/transformers_cache
+
 nonparametric_only: False
+
 
 model_name: 'gpt2'
 max_generation_length: 2048
 hf_model: True
 cross_model_steering: False
+
 
 steering: 'none'
 source_layer_idx: 20
