--- a/config/conf_length.yaml
+++ b/config/conf_length.yaml
@@ -1,16 +1,17 @@
 device: 'cuda'
-project_dir: '/home/t-astolfo/t-astolfo/length_constraints'
-data_path: '../data/input_data_single_instr.jsonl'
+project_dir: './/length_constraints'
+data_path: './input_data_single_instr.jsonl'
 dry_run: False
 output_path: 'out/'
-path_to_hf_token: '../hf_token.txt'
+path_to_hf_token: './hf_token.txt'
+transformers_cache_dir: /cluster/scratch/stolfoa/transformers_cache
 
 
-model_name: 'gpt2'
+model_name: 'phi-3'
 max_generation_length: 1024
 
 include_instructions: False
-n_sent_max: 10
+n_sent_max: 5
 length_constraint_rep_min: 0
 length_constraint_rep_max: 1
 constraint_type: at_most
