--- a/config/conf_length.yaml
+++ b/config/conf_length.yaml
@@ -1,5 +1,5 @@
 device: 'cuda'
-project_dir: './/length_constraints'
+project_dir: './length_constraints'
 data_path: './input_data_single_instr.jsonl'
 dry_run: False
 output_path: 'out/'
