--- a/config/compute_length_representations.yaml
+++ b/config/compute_length_representations.yaml
@@ -6,9 +6,9 @@ data_no_instr_path: null
 dry_run: False
 output_path: 'out/'
 path_to_hf_token: '../hf_token.txt'
-transformers_cache_dir: null
+transformers_cache_dir: /cluster/scratch/stolfoa/transformers_cache
 
-model_name: 'gpt2'
+model_name: 'phi-3'
 max_new_tokens: 2
 num_final_tokens: 2
 constraint_type: 'sentences'
