--- a/config/nonpar_plus_length.yaml
+++ b/config/nonpar_plus_length.yaml
@@ -1,12 +1,14 @@
 device: 'cuda'
-project_dir: '/home/t-astolfo/t-astolfo/composition'
-data_path: '../data/input_data_single_instr.jsonl'
+project_dir: './composition'
+data_path: './data/input_data_single_instr.jsonl'
 dry_run: False
 output_path: 'nonpar_plus_length_out/'
-path_to_hf_token: '../hf_token.txt'
+path_to_hf_token: './hf_token.txt'
 nonparametric_only: True
 seed: 42
 include_instructions: True
+transformers_cache_dir: /cluster/scratch/stolfoa/transformers_cache
+
 
 model_name: 'phi-3'
 max_generation_length: 2048
@@ -22,7 +24,7 @@ length_steering: 'conciseness'
 length_steering_weight: 20
 length_source_layer_idx: 12
 constraint_type: at_most
-length_representations_folder: '../length_constraints/representations'
+length_representations_folder: './length_constraints/representations'
 length_rep_file: high_level_50examples_hs.h5
 
 
