--- a/config/compute_representations.yaml
+++ b/config/compute_representations.yaml
@@ -3,9 +3,9 @@ data_path: './data/all_base_x_all_instructions_filtered.jsonl'
 #data_no_instr_path: '../data/input_data_no_instr.jsonl'
 data_no_instr_path: null
 dry_run: False
-output_path: 'out/'
 path_to_hf_token: './hf_token.txt'
-transformers_cache_dir: null
+transformers_cache_dir: /cluster/scratch/stolfoa/transformers_cache
+nonparametric_only: True
 
 model_name: 'gpt2'
 max_generation_length: 512
