--- a/config/find_best_layer.yaml
+++ b/config/find_best_layer.yaml
@@ -1,9 +1,10 @@
 device: 'cuda'
 data_path: './data/all_base_x_all_instructions_filtered.jsonl'
 dry_run: False
-output_path: 'ifeval_experiments/layer_search_out/'
+project_dir: 'ifeval_experiments'
+output_path: './ifeval_experiments/layer_search_out/'
 path_to_hf_token: './hf_token.txt'
-nonparametric_only: False
+nonparametric_only: True
 
 model_name: 'phi-3'
 max_generation_length: 768
@@ -11,6 +12,8 @@ n_examples_per_instruction: 10
 include_instruction: True
 specific_instruction: null
 cross_model_steering: False
+
+transformers_cache_dir: /cluster/scratch/stolfoa/transformers_cache
 
 seed: 42
 steering: 'adjust_rs'
