--- a/config/format_evaluation.yaml
+++ b/config/format_evaluation.yaml
@@ -1,13 +1,8 @@
 device: 'cuda'
-project_dir: './ifeval_experiments'
 data_path: './data/input_data_single_instr.jsonl'
 dry_run: False
 output_path: 'out/'
-path_to_hf_token: './hf_token.txt'
-transformers_cache_dir: /cluster/scratch/stolfoa/transformers_cache
-
-nonparametric_only: False
-
+transformers_cache_dir: null
 
 model_name: 'gpt2'
 max_generation_length: 2048
@@ -17,12 +12,8 @@ cross_model_steering: False
 
 steering: 'none'
 source_layer_idx: 20
-apply_to_all_layers: False
 steering_weight: 1.0
 representations_folder: 'single_instr_all_base_x_all_instr'
-use_data_subset: False
-data_subset_ratio: 0.7
-specific_instruction: null
 
 
 
