--- a/config/compute_length_representations.yaml
+++ b/config/compute_length_representations.yaml
@@ -1,16 +1,11 @@
 device: 'cuda'
-project_dir: '/home/t-astolfo/t-astolfo/ifeval_experiments'
-data_path: '../data/all_base_x_all_instructions_filtered.jsonl'
-#data_no_instr_path: '../data/input_data_no_instr.jsonl'
-data_no_instr_path: null
+data_path: '../data/ifeval_wo_instructions.jsonl'
 dry_run: False
-output_path: 'out/'
-path_to_hf_token: '../hf_token.txt'
-transformers_cache_dir: /cluster/scratch/stolfoa/transformers_cache
+transformers_cache_dir: null
 
 model_name: 'phi-3'
 max_new_tokens: 2
-num_final_tokens: 2
+num_final_tokens: 1
 constraint_type: 'sentences'
 n_sent_max: 10
 n_examples: 50
