--- a/config/compute_representations.yaml
+++ b/config/compute_representations.yaml
@@ -1,12 +1,9 @@
 device: 'cuda'
 data_path: './data/all_base_x_all_instructions_filtered.jsonl'
-data_no_instr_path: null
 dry_run: False
-output_path: 'out/'
-path_to_hf_token: './hf_token.txt'
 transformers_cache_dir: null
 
-model_name: 'gpt2'
+model_name: 'phi-3'
 max_generation_length: 512
 num_final_tokens: 1
 use_data_subset: False
