--- a/config/length_evaluation.yaml
+++ b/config/length_evaluation.yaml
@@ -1,8 +1,7 @@
 device: 'cuda'
-project_dir: './length_constraints'
-data_path: './input_data_single_instr.jsonl'
+data_path: './data/ifeval_wo_instructions.jsonl'
 dry_run: False
-output_path: 'out/'
+output_path: 'out'
 path_to_hf_token: './hf_token.txt'
 transformers_cache_dir: /cluster/scratch/stolfoa/transformers_cache
 
@@ -12,8 +11,6 @@ max_generation_length: 1024
 
 include_instructions: False
 n_sent_max: 5
-length_constraint_rep_min: 0
-length_constraint_rep_max: 1
 constraint_type: at_most
 n_examples: 50
 steering_weights: [1]
@@ -22,8 +19,7 @@ length_rep_file: high_level_50examples_hs.h5
 
 steering: 'none'
 source_layer_idx: 12
-apply_to_all_layers: False
-representations_folder: './representations'
+representations_folder: 'representations'
 
 
 
