--- a/config/compute_keyword_representations.yaml
+++ b/config/compute_keyword_representations.yaml
@@ -1,18 +1,13 @@
 device: 'cuda'
-project_dir: './ifeval_experiments'
-data_path: '../data/all_base_x_all_instructions_filtered.jsonl'
-#data_no_instr_path: '../data/input_data_no_instr.jsonl'
+base_queries_path: 'data/ifeval_wo_instructions.jsonl'
 data_no_instr_path: null
-dry_run: False
-output_path: 'out/'
-path_to_hf_token: './hf_token.txt'
-transformers_cache_dir: /cluster/scratch/stolfoa/transformers_cache
+transformers_cache_dir: null
 
 model_name: 'phi-3'
 max_new_tokens: 2
 num_final_tokens: 1
 constraint_type: 'include'
-word_list: ['apple']
+keywords_set: 'ifeval_include'
 n_examples: 10
 
 defaults:
