--- a/config/find_best_layer_keywords.yaml
+++ b/config/find_best_layer_keywords.yaml
@@ -1,24 +1,20 @@
 device: 'cuda'
-project_dir: './keywords'
 data_path: './data/keyword_validation.jsonl'
 dry_run: False
-output_path: 'layer_search_out/'
-path_to_hf_token: './hf_token.txt'
-nonparametric_only: False
-transformers_cache_dir: /cluster/scratch/stolfoa/transformers_cache
+output_path: 'layer_search_out'
+transformers_cache_dir: null
 
 model_name: 'phi-3'
-max_generation_length: 768
-n_examples_per_instruction: 10
+steering: 'add_vector'
+steering_weights: [100]
+
 include_instruction: True
 constraint: 'exclude'
-steering_weights: [100]
+
 n_examples: 20
-
+max_generation_length: 768
+n_examples_per_instruction: 10
 seed: 42
-steering: 'add_vector'
-
-
 
 
 defaults:
