--- a/config/keyword_evaluation.yaml
+++ b/config/keyword_evaluation.yaml
@@ -1,11 +1,8 @@
 device: 'cuda'
-project_dir: './keywords'
-data_path: './data/input_data_single_instr.jsonl'
+data_path: 'data/input_data_single_instr.jsonl'
 dry_run: False
-output_path: 'out/'
-path_to_hf_token: './hf_token.txt'
-nonparametric_only: False
-transformers_cache_dir: /cluster/scratch/stolfoa/transformers_cache
+output_path: 'out'
+transformers_cache_dir: null
 
 model_name: 'phi-3'
 max_generation_length: 1024
@@ -18,8 +15,6 @@ source_layer_idx: 24
 steering_weight: 0.0
 n_examples: 10
 representations_folder: 'representations'
-
-
 
 
 defaults:
