--- a/config/length/length_evaluation.yaml
+++ b/config/length/length_evaluation.yaml
@@ -1,10 +1,8 @@
 device: 'cuda'
-data_path: './data/ifeval_wo_instructions.jsonl'
 dry_run: False
+base_queries_path: 'data/ifeval_wo_instructions.jsonl'
 output_path: 'out'
-path_to_hf_token: './hf_token.txt'
-transformers_cache_dir: /cluster/scratch/stolfoa/transformers_cache
-
+transformers_cache_dir: null
 
 model_name: 'phi-3'
 max_generation_length: 1024
@@ -14,13 +12,11 @@ n_sent_max: 5
 constraint_type: at_most
 n_examples: 50
 steering_weights: [1]
-length_rep_file: high_level_50examples_hs.h5
 
-
-steering: 'none'
+steering: 'none' # 'none', 'add_vector_length_specific', 'add_vector_conciseness', 'add_vector_verbosity'
 source_layer_idx: 12
 representations_folder: 'representations'
-
+length_rep_file: high_level_50examples_hs.h5
 
 
 defaults:
