--- a/.gitignore
+++ b/.gitignore
@@ -3,17 +3,14 @@ hf_token.txt
 __pycache__/
 *.pyc
 packages-microsoft*
-format/representations/
-format/representations_old/
-keywords/representations/
-length/representations/
 .vscode/
-stored_hs
 .DS_Store
 *.download
 *.zip
-exploration/
-plots_for_paper/
 nuget.config
 */layer_search_out_old
+*/out_old
+*/out
+*/representations
+*/representations_old/
 find_best_layer_test.sh
